--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=booksSys
+
+spring.datasource.url=jdbc:mysql://localhost:3306/book_sys
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
